--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,6 @@
 {
-  "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "installCommand": "npm install --legacy-peer-deps",
-  "framework": "vite",
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  }
+  "buildCommand": "npx vite build",
+  "outputDirectory": "dist",
+  "framework": "vite"
 }
